[package]
name = "remote-lock-screen"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = "1.4.1"
reqwest = { version =  "0.12.8", features = ["json"] }
windows = { version = "0.58.0", features = ["Win32", "Win32_System", "Win32_System_Shutdown"] }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.80"
serde = { version = "1.0.130", features = ["derive"] }